<resources>
    <string name="app_name">Party</string>
    <string name="login">Login with Spotify</string>
    <string name="error">Could not login</string>
    <string name="loggedIn">Logged in successfully</string>
    <string name="poweredBy">Powered by</string>
    <string name="spotify">Spotify</string>
    <string name="logout">Logout</string>

    <string name="loading">Loading…</string>
    <string name="refresh">Refresh</string>

    <string name="join_party">Join a Party</string>
    <string name="your_party">Your Party</string>
    <string name="party_playlist">Shuffling %1$s</string>

    <string name="now_playing">Now Playing</string>

    <string name="your_playlists">Your Playlists</string>
    <string name="playlist_icon">Playlist Icon</string>
    <string name="track_count">%1$s songs</string>
    <string name="track_count_singular">%1$s song</string>

    <string name="queue">Queue</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="add_to_queue_hint">Add a song to the queue</string>
    <string name="select_playlist">Select Playlist</string>
    <string name="shuffle_play">Shuffle Play</string>
</resources>
